BPER/DEVF/force-app/main/default/objects/Simulazione__c/Simulazione__c.object-meta.xml
<CustomObject>
    <label>Simulazione</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Nome Simulazione</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Simulazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>