BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Durata__c.field-meta.xml
<CustomField>
    <fullName>Durata__c</fullName>
    <label>Duration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 mese</fullName>
            </value>
            <value>
                <fullName>2 mesi</fullName>
            </value>
            <value>
                <fullName>3 mesi</fullName>
            </value>
            <value>
                <fullName>6 mesi</fullName>
            </value>
            <value>
                <fullName>9 mesi</fullName>
            </value>
            <value>
                <fullName>1 anno</fullName>
            </value>
            <value>
                <fullName>18 mesi</fullName>
            </value>
            <value>
                <fullName>2 anni</fullName>
            </value>
            <value>
                <fullName>3 anni</fullName>
            </value>
            <value>
                <fullName>4 anni</fullName>
            </value>
            <value>
                <fullName>5 anni</fullName>
            </value>
            <value>
                <fullName>6 anni</fullName>
            </value>
            <value>
                <fullName>7 anni</fullName>
            </value>
            <value>
                <fullName>8 anni</fullName>
            </value>
            <value>
                <fullName>9 anni</fullName>
            </value>
            <value>
                <fullName>10 anni</fullName>
            </value>
            <value>
                <fullName>11 anni</fullName>
            </value>
            <value>
                <fullName>12 anni</fullName>
            </value>
            <value>
                <fullName>13 anni</fullName>
            </value>
            <value>
                <fullName>14 anni</fullName>
            </value>
            <value>
                <fullName>15 anni</fullName>
            </value>
            <value>
                <fullName>16 anni</fullName>
            </value>
            <value>
                <fullName>17 anni</fullName>
            </value>
            <value>
                <fullName>18 anni</fullName>
            </value>
            <value>
                <fullName>19 anni</fullName>
            </value>
            <value>
                <fullName>20 anni</fullName>
            </value>
            <value>
                <fullName>21 anni</fullName>
            </value>
            <value>
                <fullName>22 anni</fullName>
            </value>
            <value>
                <fullName>23 anni</fullName>
            </value>
            <value>
                <fullName>24 anni</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>