BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Duration_Number__c.field-meta.xml
<CustomField>
    <fullName>Duration_Number__c</fullName>
    <label>Duration</label>
    <precision>18</precision>
    <required>true</required>
    <scale>1</scale>
    <type>Number</type>
</CustomField>