BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/EVA__c.field-meta.xml
<CustomField>
    <fullName>EVA__c</fullName>
    <label>EVA</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>