BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Importo_totale_operazione__c.field-meta.xml
<CustomField>
    <fullName>Importo_totale_operazione__c</fullName>
    <label>Importo BPER</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>