BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Linee__c.field-meta.xml
<CustomField>
    <fullName>Linee__c</fullName>
    <label>#Linee</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>