BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/NDG__c.field-meta.xml
<CustomField>
    <fullName>NDG__c</fullName>
    <formula>Nome_del_Gestore__r.ndgsettoriale__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NDG</label>
    <type>Text</type>
</CustomField>