BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Nome_del_Gestore__c.field-meta.xml
<CustomField>
    <fullName>Nome_del_Gestore__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Nome del Gestore</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Operazioni</relationshipName>
    <type>Lookup</type>
</CustomField>