BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/NOPAT__c.field-meta.xml
<CustomField>
    <fullName>NOPAT__c</fullName>
    <label>NOPAT Attualizzato</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>