BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Present_RARORAC__c.field-meta.xml
<CustomField>
    <fullName>Present_RARORAC__c</fullName>
    <label>RARORAC %</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>