BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Principale__c.field-meta.xml
<CustomField>
    <fullName>Principale__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Principale</label>
    <type>Checkbox</type>
</CustomField>