BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/RARORAC__c.field-meta.xml
<CustomField>
    <fullName>RARORAC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>RARORAC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>