BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/RWA_Medio_perc__c.field-meta.xml
<CustomField>
    <fullName>RWA_Medio_perc__c</fullName>
    <label>RWA medio %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>