BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Segmento_di_Rischio__c.field-meta.xml
<CustomField>
    <fullName>Segmento_di_Rischio__c</fullName>
    <label>Segmento di Rischio</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LARGE</fullName>
            </value>
            <value>
                <fullName>PMIIM</fullName>
            </value>
            <value>
                <fullName>PMIHO</fullName>
            </value>
            <value>
                <fullName>PMISL</fullName>
            </value>
            <value>
                <fullName>PMICO</fullName>
            </value>
            <value>
                <fullName>SOCFZ</fullName>
            </value>
            <value>
                <fullName>AMMPB</fullName>
            </value>
            <value>
                <fullName>NEWCO</fullName>
            </value>
            <value>
                <fullName>NONAT</fullName>
            </value>
            <value>
                <fullName>BANCH</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>