BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/SML_annuo__c.field-meta.xml
<CustomField>
    <fullName>SML_annuo__c</fullName>
    <label>SML annuo (€)</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>