BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Spread_medio_ponderato__c.field-meta.xml
<CustomField>
    <fullName>Spread_medio_ponderato__c</fullName>
    <label>Spread/Tasso medio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>