BPER/DEVF/force-app/main/default/objects/Simulazione__c/fields/Up_front__c.field-meta.xml
<CustomField>
    <fullName>Up_front__c</fullName>
    <label>Upfront media</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>